\name{NEWS}
\title{News for Package \pkg{EloChoice}}

\section{Changes in version 0.28 (2015-10-11)}{
	\itemize{
		\item first version published on CRAN
	}
}

\section{Changes in version 0.27 (2015-10-11)}{
	\itemize{
		\item second version submitted to CRAN
	}
}

\section{Changes in version 0.26 (2015-10-10)}{
	\itemize{
		\item first version submitted to CRAN
	}
}