@@ -1,8 +1,8 @@
 Package: EloChoice
 Type: Package
 Title: Preference Rating for Visual Stimuli Based on Elo Ratings
-Version: 0.28
-Date: 2015-10-11
+Version: 0.29
+Date: 2015-10-12
 Author: Christof Neumann
 Maintainer: Christof Neumann <christofneumann1@gmail.com>
 Description: Allows calculating global scores for characteristics of visual stimuli. Stimuli are presented as sequence of pairwise comparisons ('contests'), during each of which a rater expresses  preference for one stimulus over the other. The algorithm for calculating global scores is based on Elo rating, which updates individual scores after each single pairwise contest. Elo rating is widely used to rank chess players according to their performance. Its core feature is that dyadic contests with expected outcomes lead to smaller changes of participants' scores than outcomes that were unexpected. As such, Elo rating is an efficient tool to rate individual stimuli when a large number of such stimuli are paired against each other in the context of experiments where the goal is to rank stimuli according to some characteristic of interest.
@@ -10,7 +10,7 @@ License: GPL (>= 2)
 LinkingTo: Rcpp, RcppArmadillo
 Imports: Rcpp
 Suggests: xtable
-Packaged: 2015-10-11 18:34:18 UTC; cn
+Packaged: 2015-10-12 10:40:04 UTC; cn
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2015-10-12 00:41:44
+Date/Publication: 2015-10-12 13:46:29
