@@ -1,4 +1,4 @@
-5063e4d74d44d6f7ce686b55105691ac *DESCRIPTION
+06bb120d307deaba6a9cd806a66162e7 *DESCRIPTION
 f332aa05f2ab9def3e0bd9723b0302c4 *NAMESPACE
 c064c370c66209bc21fae077ffacaf26 *R/RcppExports.R
 887681e6069d7fce38193a7771e359e5 *R/elochoice.R
@@ -10,11 +10,11 @@ c13b980794ddb15a76ff46e34eadff00 *R/summary.elochoice.R
 11c8aaa6c4b031f838048297f395775f *R/triplets.R
 5436f0ed05f43cf7778797a75228025d *build/vignette.rds
 35d1026bdd58bf5f8165338bbdfd03f1 *data/physical.rda
-8154204e3ba8204ea7b79242d4894c3c *inst/NEWS.Rd
+26aede81344960ff8cabee1fe371f590 *inst/NEWS.Rd
 32dfa2641d430c1e6f9b1addcfb7292f *inst/doc/tutorial.R
-327ec974fe67e788f4ff3b6c0a70b443 *inst/doc/tutorial.Rnw
-2a4c687f692855bea28dc492ebd812e6 *inst/doc/tutorial.pdf
-0654ef70506d6fc320341b4a4ddc603e *man/EloChoice-package.Rd
+7f38beabf22524cbbe1b61aa057ff757 *inst/doc/tutorial.Rnw
+27daed8b45c58316f24c86b28c30304b *inst/doc/tutorial.pdf
+b257a95fc8655cf4e2ad17be333f6d2f *man/EloChoice-package.Rd
 95e5df2739d4188368853b76650b160f *man/elochoice.Rd
 9faa238add6d18bd544865deaaf69f88 *man/physical.Rd
 7e0e4d0e4aac533368c47093fde713e1 *man/randompairs.Rd
@@ -24,5 +24,5 @@ a92fe19ecdd9b9002fe0f7d8f130ffe7 *man/ratings.Rd
 c32729478f8869611e612dab7b77a4d4 *man/summary.attractelo.Rd
 9f35014fea9b99ac810e83b0a72eb830 *man/triplets.Rd
 5f6db55a7d9bd318707cbffbc5f7c558 *src/RcppExports.cpp
-cd7e5822e698da5f40f003938393ab89 *src/eloint.cpp
-327ec974fe67e788f4ff3b6c0a70b443 *vignettes/tutorial.Rnw
+6b9903cef5c344e651eb66ed78f524f7 *src/eloint.cpp
+7f38beabf22524cbbe1b61aa057ff757 *vignettes/tutorial.Rnw
