@@ -8,8 +8,8 @@
 \tabular{ll}{
 Package: \tab EloChoice\cr
 Type: \tab Package\cr
-Version: \tab 0.28\cr
-Date: \tab 2015-10-11\cr
+Version: \tab 0.29\cr
+Date: \tab 2015-10-12\cr
 License: \tab GPL (>=2)\cr
 }
 }
