@@ -1,6 +1,12 @@
 \name{NEWS}
 \title{News for Package \pkg{EloChoice}}
 
+\section{Changes in version 0.29 (2015-10-12)}{
+	\itemize{
+		\item bug fix in C++ code of elointnorm
+	}
+}
+
 \section{Changes in version 0.28 (2015-10-11)}{
 	\itemize{
 		\item first version published on CRAN
